glFusion ChangeLog

v1.3.0 (Trunk Development Branch)
------
- Initialize $_USER for all users (including anonymous) (Mark)
- Modified to now check $_USER for user preferences (Mark)
- Fixed race condition when creating menu cache files (menu/css/js) (Mark)
- Updated phpmailer to latest release (Mark)
- Highlight comments in Media Gallery when posted by media owner (Mark)
- Added halo skin to Media Gallery (compliments of Walter Rowe) (Mark)
- Implemented consistent admin interface for
   - Bad Behavior2 Plugin
   - FileMgmt Plugin
   - Forum Plugin
   - Media Gallery Plugin
- Updated PEAR modules to latest releases (Mark)
- Updated getID3() library to latest production release. (Mark)
- Integrated Site Tailor plugin (menu editor / logo admin) into the glFusion
  core code. The Site Tailor plugin has been retired. (Mark)
- Forum Plugin: General code clean up / optimizations / template consolidation
  (Mark)
- Removed bundled plugin table definitions from lib-database - now part of
  each plugin (Mark)
- Cleaned up search queries so all now retrieve the same set of vars and
  no longer retrieve unused variables (Mark)
- Implemented new $_PLUGIN_INFO[] array - this contains ['pi_name'] = pi_version
  This allows the plugin to check the installed version without having
  to hit the database. (Mark)
- upload.class.php - log error if unable to determine mime type (Mark)
- Fixed issue where 'All but Homepage' block setting did not display properly
  when topic was not empty (Mark)
- Calendar Plugin: Fixed admin edit to display appropriate errors and the
  input form properly (with previously entered data) when submission
  fails (Mark)
- New SESS API - SESS_isSet() checks to see if session variable is set (Mark)
- General code cleanup in lib-common.php - removed unused code and unreferenced
  items in COM_siteHeader / COM_siteFooter (Mark)
- Made SEC_inGroup comparison case insensitive (Mark H.)
- Implemented subscription / notification system (Mark)