@@ -2,6 +2,9 @@ glFusion ChangeLog
 
 v1.3.0 (Trunk Development Branch)
 ------
+- Implement new What's New options - no longer display an item
+  if not new items are available.  New config option to hide
+  What's New block if no entries to display (Mark/Lee)
 - Initialize $_USER for all users (including anonymous) (Mark)
 - Modified to now check $_USER for user preferences (Mark)
 - Fixed race condition when creating menu cache files (menu/css/js) (Mark)
